adding updates to knn and voting ensemble

--- a/model_knn.ipynb
+++ b/model_knn.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:49:59.381018Z",
-     "start_time": "2023-06-08T20:49:58.449491Z"
+     "end_time": "2023-06-12T08:18:44.347280Z",
+     "start_time": "2023-06-12T08:18:44.342145Z"
     }
    },
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -37,6 +37,7 @@
     "    PowerTransformer,\n",
     "    RobustScaler\n",
     ")\n",
+    "from sklearn.feature_selection import SelectKBest, mutual_info_classif\n",
     "from sklearn.compose import make_column_transformer, make_column_selector\n",
     "\n",
     "from imblearn.pipeline import Pipeline\n",
@@ -48,14 +49,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:49:59.577248Z",
-     "start_time": "2023-06-08T20:49:59.382884Z"
+     "end_time": "2023-06-12T08:19:45.110965Z",
+     "start_time": "2023-06-12T08:19:45.107306Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "data = TransactionDataset().get_training_test_split()"
@@ -63,14 +64,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:01.474696Z",
-     "start_time": "2023-06-08T20:49:59.577902Z"
+     "end_time": "2023-06-12T08:18:48.291940Z",
+     "start_time": "2023-06-12T08:18:46.335494Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "log_transform = FunctionTransformer(\n",
@@ -110,14 +111,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:01.483986Z",
-     "start_time": "2023-06-08T20:50:01.475383Z"
+     "end_time": "2023-06-12T08:18:50.964165Z",
+     "start_time": "2023-06-12T08:18:50.961294Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "knn_classifier = KNeighborsClassifier(\n",
@@ -127,14 +128,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:01.490764Z",
-     "start_time": "2023-06-08T20:50:01.488457Z"
+     "end_time": "2023-06-12T08:18:52.754536Z",
+     "start_time": "2023-06-12T08:18:52.746980Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "smote_sampling = SMOTE(random_state=ModelConstants.RANDOM_STATE)\n",
@@ -143,14 +144,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:01.499392Z",
-     "start_time": "2023-06-08T20:50:01.492501Z"
+     "end_time": "2023-06-12T08:18:53.288395Z",
+     "start_time": "2023-06-12T08:18:53.281107Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "near_miss_sampling = NearMiss()\n",
@@ -159,14 +160,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:01.499670Z",
-     "start_time": "2023-06-08T20:50:01.497484Z"
+     "end_time": "2023-06-12T08:18:54.840327Z",
+     "start_time": "2023-06-12T08:18:54.832353Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "select_best_features = SelectKBest(score_func=mutual_info_classif)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T08:21:45.055050Z",
+     "start_time": "2023-06-12T08:21:45.048211Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "column_transforms_only_model = Pipeline(\n",
@@ -174,6 +190,7 @@
     "        (\"column_transformation\", log_and_ordinal_transforms),\n",
     "        (\"over_sampling\", smote_sampling),\n",
     "        (\"under_sampling\", near_miss_sampling),\n",
+    "        (\"feature_selection\", select_best_features),\n",
     "        (\"knn\", knn_classifier)\n",
     "    ]\n",
     ")"
@@ -181,14 +198,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:01.506421Z",
-     "start_time": "2023-06-08T20:50:01.501699Z"
+     "end_time": "2023-06-12T08:21:47.427094Z",
+     "start_time": "2023-06-12T08:21:47.421668Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "column_transformation_tune = {\n",
@@ -234,6 +251,10 @@
     "    \"knn__p\": [1, 2]\n",
     "}\n",
     "\n",
+    "knn_feature_selection = {\n",
+    "    \"feature_selection__k\": [5, 7, 9, 10, 12, 14, 16, 18]\n",
+    "}\n",
+    "\n",
     "tuning_params_1 = (\n",
     "        column_transformation_tune |\n",
     "        over_sampling_tuning |\n",
@@ -241,7 +262,8 @@
     "        under_sampling_tuning |\n",
     "        knn__n_neighbors_tuning |\n",
     "        knn__weights |\n",
-    "        knn_power\n",
+    "        knn_power |\n",
+    "        knn_feature_selection\n",
     ")\n",
     "\n",
     "tuning_params_2 = (\n",
@@ -249,20 +271,21 @@
     "        under_sampling_tuning |\n",
     "        knn__n_neighbors_tuning |\n",
     "        knn__weights |\n",
-    "        knn_power\n",
+    "        knn_power |\n",
+    "        knn_feature_selection\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:01.512284Z",
-     "start_time": "2023-06-08T20:50:01.509349Z"
+     "end_time": "2023-06-12T08:23:23.049385Z",
+     "start_time": "2023-06-12T08:23:23.044266Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -281,15 +304,16 @@
       "                                ('drop', 'drop',\n",
       "                                 ['Info_Page_Time', 'ProductPage_Time',\n",
       "                                  'GoogleAnalytics_ER']),\n",
-      "                                ('powertransformer', PowerTransformer(),\n",
-      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x137beb190>)]),\n",
-      "    'knn__n_neighbors': 19,\n",
+      "                                ('robustscaler', RobustScaler(),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x1535b7b20>)]),\n",
+      "    'feature_selection__k': 12,\n",
+      "    'knn__n_neighbors': 11,\n",
       "    'knn__p': 1,\n",
       "    'knn__weights': 'uniform',\n",
       "    'over_sampling': ADASYN(random_state=123, sampling_strategy=0.3),\n",
       "    'over_sampling__sampling_strategy': 0.3,\n",
       "    'under_sampling': TomekLinks()}\n",
-      "Best parameter (CV score: 0.636):\n"
+      "Best parameter (CV score: 0.645):\n"
      ]
     }
    ],
@@ -310,21 +334,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:07.798602Z",
-     "start_time": "2023-06-08T20:50:01.514878Z"
+     "end_time": "2023-06-12T08:23:34.676506Z",
+     "start_time": "2023-06-12T08:23:23.546380Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.266528\n1                              score_time mean score  0.139839\n2                      5-fold CV F1 Score mean score  0.635646\n3                      5-fold CV Accuracy mean score  0.879352\n4             5-fold CV Balanced Accuracy mean score  0.795555\n5  5-fold CV Matthew's Correlation Coefficient me...  0.565481",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.266528</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.139839</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.635646</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.879352</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.795555</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.565481</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.792414\n1                              score_time mean score  0.123304\n2                      5-fold CV F1 Score mean score  0.648334\n3                      5-fold CV Accuracy mean score  0.878328\n4             5-fold CV Balanced Accuracy mean score  0.813104\n5  5-fold CV Matthew's Correlation Coefficient me...  0.579898",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.792414</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.123304</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.648334</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.878328</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.813104</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.579898</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,21 +364,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:09.857116Z",
-     "start_time": "2023-06-08T20:50:07.801449Z"
+     "end_time": "2023-06-12T08:23:43.789158Z",
+     "start_time": "2023-06-12T08:23:39.192986Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
-      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.650694\n1                           Accuracy  0.886522\n2                  Balanced Accuracy  0.783327\n3  Matthew's Correlation Coefficient  0.583615",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.650694</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.886522</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.783327</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.583615</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.681983\n1                           Accuracy  0.892257\n2                  Balanced Accuracy  0.791804\n3  Matthew's Correlation Coefficient  0.620185",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.681983</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.892257</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.791804</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.620185</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,33 +389,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:10.499696Z",
-     "start_time": "2023-06-08T20:50:09.859661Z"
+     "end_time": "2023-06-12T08:23:45.043902Z",
+     "start_time": "2023-06-12T08:23:43.791228Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:10.503265Z",
-     "start_time": "2023-06-08T20:50:10.500448Z"
+     "end_time": "2023-06-12T08:24:00.961973Z",
+     "start_time": "2023-06-12T08:24:00.954477Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
       "text/plain": "['./models_exports/knn_classifier.joblib']"
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,9 +426,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:50:10.548066Z",
-     "start_time": "2023-06-08T20:50:10.510697Z"
+     "end_time": "2023-06-12T08:24:02.101191Z",
+     "start_time": "2023-06-12T08:24:02.087526Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
