adding .py versions of all files plus output of eda.

--- a/check_high_levarage_points.ipynb
+++ b/check_high_levarage_points.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-07T22:40:32.189157Z",
-     "start_time": "2023-06-07T22:40:29.595488Z"
+     "end_time": "2023-06-14T23:26:01.290722Z",
+     "start_time": "2023-06-14T23:25:59.723066Z"
     }
    },
    "outputs": [],
    "source": [
-    "from yellowbrick.regressor import CooksDistance\n",
     "from yellowbrick.regressor import cooks_distance\n",
-    "from utils import TransactionDataset"
+    "from utils import TransactionDataset\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "data = TransactionDataset().get_training_test_split()"
@@ -27,14 +27,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T22:40:42.326937Z",
-     "start_time": "2023-06-07T22:40:41.886790Z"
+     "end_time": "2023-06-14T23:26:02.514761Z",
+     "start_time": "2023-06-14T23:26:02.173093Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "data.TRAINING.predictors.pop(\"Customer_Type\")\n",
@@ -44,14 +44,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T22:40:43.025905Z",
-     "start_time": "2023-06-07T22:40:43.020521Z"
+     "end_time": "2023-06-14T23:26:03.131321Z",
+     "start_time": "2023-06-14T23:26:03.125581Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -67,13 +67,17 @@
     "    data.TRAINING.predictors,\n",
     "    data.TRAINING.outcome,\n",
     "    draw_threshold=True,\n",
-    ");"
+    "    show=False\n",
+    ")\n",
+    "\n",
+    "plt.savefig(\"./eda_results/features_cooks_distance.png\")\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T01:07:08.942995Z",
-     "start_time": "2023-06-08T01:07:08.331486Z"
+     "end_time": "2023-06-14T23:26:53.211607Z",
+     "start_time": "2023-06-14T23:26:52.483656Z"
     }
    }
   },
