--- a/check_multicolinearity.ipynb
+++ b/check_multicolinearity.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:54:48.122237Z",
+     "start_time": "2023-06-12T10:54:48.111876Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from utils import (\n",
@@ -15,8 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:54:48.122544Z",
+     "start_time": "2023-06-12T10:54:48.117367Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -26,43 +36,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "data = TransactionDataset()\n",
     "data.data.pop(Columns.TRANSACTION);"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:54:48.533643Z",
+     "start_time": "2023-06-12T10:54:48.122669Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "data.data = pd.get_dummies(data.data, columns=[Columns.CUSTOMER_TYPE, Columns.SPECIFIC_HOLIDAY])\n",
     "data.data = data.data.astype(\"float\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:54:48.546162Z",
+     "start_time": "2023-06-12T10:54:48.536683Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "vif_data = pd.DataFrame()\n",
     "vif_data[\"feature\"] = data.data.columns"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:54:48.551346Z",
+     "start_time": "2023-06-12T10:54:48.548197Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mladenrm/.local/share/virtualenvs/ML_Challenge-_INNdbtJ/lib/python3.10/site-packages/statsmodels/stats/outliers_influence.py:198: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  vif = 1. / (1. - r_squared_i)\n"
+     ]
+    }
+   ],
+   "source": [
+    "vif_data[\"VIF\"] = [variance_inflation_factor(data.data.values, i)\n",
+    "                          for i in range(len(data.data.columns))]\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:54:49.074811Z",
+     "start_time": "2023-06-12T10:54:48.553220Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -101,13 +149,27 @@
     }
    ],
    "source": [
-    "vif_data[\"VIF\"] = [variance_inflation_factor(data.data.values, i)\n",
-    "                          for i in range(len(data.data.columns))]\n",
-    "\n",
     "print(vif_data)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:56:47.335132Z",
+     "start_time": "2023-06-12T10:56:47.329099Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T10:54:49.093959Z",
+     "start_time": "2023-06-12T10:54:49.085662Z"
+    }
    }
   }
  ],
